Add internationalization support (English, Bulgarian)
- Add _locales/en and _locales/bg with translated strings
- Update manifest.json with default_locale and i18n placeholders
- Update popup to load translations via browser.i18n API

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,8 @@
     </style>
 </head>
 <body>
-    <button id="captureBtn">Print Page</button>
+    <button id="captureBtn" data-i18n="printButton"></button>
+    <p id="description" style="margin: 10px 0 0; font-size: 12px; color: #666;" data-i18n="printDescription"></p>
     <script src="popup.js"></script>
 </body>
 </html>
